<resources>
    <string name="app_name">Homework01</string>
    <string name="action_settings">Settings</string>
    <string name="BMI">Body Mass Index (BMI)</string>
    <string name="weight">Weight</string>
    <string name="lb">lb</string>
    <string name="height">Height</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="calculate_BMI">Calculate BMI</string>

</resources>
